update README and try moving up the guess box to avoid it overlapping page edge at github.io

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
   transform: translateY(-50%);
 }
 #footer {
-  margin-top: 600px;
+  margin-top: 500px;
   width: 20%;
 }
 form {
